--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: page
-title: Fabio Souto
-tagline: Supporting tagline
+title: Solomon Kim
+tagline: Music Composer
 ---
 
 <div class="row">
   <div class="col-md-12">
     <div class="welcome-message">
-        <h1>Hello I'm Fabio,</h1>
+        <h1>Solomon Kim</h1>
         <h1>I'm a freelance full stack developer.</h1>
         <h1>If you want to contact me, <a href="mailto:fabio@fabiosouto.me">send me an email.</a></h1>
     </div>
