--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ tagline: Music Composer
   <div class="col-md-12">
     <div class="welcome-message">
         <h1>Solomon Kim</h1>
-        <h1>I'm a freelance full stack developer.</h1>
-        <h1>If you want to contact me, <a href="mailto:fabio@fabiosouto.me">send me an email.</a></h1>
+        <h1>I'm a Tokyo-based music producer and high school student.</h1>
+        <h1>If you want to contact me, <a href="mailto:hello@solomonkim.me">send me an email.</a></h1>
     </div>
   </div>
 </div>
